--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
