--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.mustache.suffix=.html
-
+#spring.mustache.suffix=.html
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
 #spring.datasource.password=password
