--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.mustache.suffix=.html
+spring.main.banner-mode=off
 
+spring.mustache.suffix=.html
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -9,3 +10,16 @@ spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_buyify
 #spring.datasource.username=admin
 #spring.datasource.password=admin
+
+server.port=8443
+#server.ssl.enabled=true
+#security.require-ssl=true
+server.ssl.key-store-type=JKS
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-password=password
+server.ssl.key-alias=selfsigned
+
+spring.security.user.name = admin
+spring.security.user.password = admin
+spring.security.user.roles= = ADMIN
