--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,12 @@ spring.mustache.suffix=.html
 #spring.datasource.password=password
 #spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_buyify
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.continue-on-error=true
 
 server.port=8443
 #server.ssl.enabled=true
