--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   mysql:
+    container_name: mysql
     image: mysql:8.0.19
     command: --default-authentication-plugin=mysql_native_password
     environment:
@@ -14,3 +15,10 @@ services:
     volumes:
       - /home/jpc/Desktop/mysql:/var/lib/mysql
     restart: 'no'
+
+  redis:
+    container_name: redis
+    image: 'redis:latest'
+    command: redis-server --requirepass mascachapas
+    ports:
+      - '6379:6379'
