Basic Redis implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.datasource.password=mascachapas
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.continue-on-error=true
 
+spring.redis.host=localhost
+spring.redis.password=mascachapas
+spring.redis.port=6379
+
 server.port=8443
 #server.ssl.enabled=true
 #security.require-ssl=true
