--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.mustache.suffix=.html
 #spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_buyify
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql}:3306/db_buyify
 spring.datasource.username=admin
 spring.datasource.password=mascachapas
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.continue-on-error=true
 
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.password=mascachapas
 spring.redis.port=6379
 
